[tool.poetry]
name = "pyfield"
version = "0.0.1"
description = "Collection of field for your form"
authors = ["Ublim <ublimjo@gmail.com>"]
license = "mit"

[tool.poetry.dependencies]
python = "*"
expynent = "1.0"

[tool.poetry.dev-dependencies]
pylint = { version = "*", python = "~2.7" }
pytest = "^3.8"
pytest-cov = "^2.6"
icecream = "^1.3"
tox = "^3.2"
