[tool.poetry]
name = "pyfield"
version = "0.1.3"
description = "Collection of field for your form"
authors = ["Ublim <ublimjo@gmail.com>"]
license = "mit"
readme = "README.rst"
homepage = "https://github.com/Ublimjo/pyfield"

[tool.poetry.dependencies]
python = "*"

[tool.poetry.dev-dependencies]
pytest = "^3.8"
pytest-cov = "^2.6"
icecream = "^1.3"
tox = "^3.2"
