[tool.poetry]
name = "pyfield"
version = "0.1.3"
description = "Collection of field for your form"
authors = ["Ublim <ublimjo@gmail.com>"]
license = "mit"
readme = "README.rst"
homepage = "https://github.com/Ublimjo/pyfield"
keywords = ["field", "form", "validator"]
classifiers=[
    'Development Status :: 2 - Pre-Alpha',
    'Environment :: Console',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3.6',
    'Topic :: Terminals',
    'Topic :: Text Processing :: Filters',
    'Topic :: Utilities',
]

[tool.poetry.dependencies]
python = "*"

[tool.poetry.dev-dependencies]
pytest = "^3.8"
pytest-cov = "^2.6"
icecream = "^1.3"
tox = "^3.2"
